--- a/style.css
+++ b/style.css
@@ -23,18 +23,18 @@ img {
 }
 
 nav a:hover {
-    color: black;
+    color: #649ad3;
     text-decoration: line-through;
 }
 
 
 
 header nav a {
-    border-right: 1px black solid;
+    border-right: 1px #649ad3 solid;
     padding: 0 0.5rem;
     font-family: 'Handlee', cursive;
-
 }
+
 
 header nav a:last-child {
     border-right: 0;
