--- a/style.css
+++ b/style.css
@@ -48,13 +48,13 @@ header nav a:last-child {
     height: 100vw;
 }
 
-#portfolio {
+/*#portfolio {
     background-image: url(billeder/portfolio1.jpg);
     background-size: cover;
     max-width: none;
     width: 100%;
     height: 100vw;
-}
+}*/
 
 
 .menubar {
@@ -65,25 +65,6 @@ header nav a:last-child {
     justify-content: space-between;
     align-items: center;
     height: 3.5rem;
-}
-
-
-@media only screen and (min-width: 900px) {
-    #splash {
-        background-image: url(billeder/splash.jpg);
-        background-size: cover;
-        width: 100%;
-        height: 56.25vw;
-    }
-}
-
-@media only screen and (min-width: 900px) {
-    #portfolio {
-        background-image: url(billeder/portfolio.jpg);
-        background-size: cover;
-        width: 100%;
-        height: 56.25vw;
-    }
 }
 
 #myBtn {
@@ -141,3 +122,24 @@ header nav a:last-child {
         opacity: 1;
     }
 }
+
+
+/*Mediequeries*/
+@media only screen and (min-width: 900px) {
+    #splash {
+        background-image: url(billeder/splash.jpg);
+        background-size: cover;
+        width: 100%;
+        height: 56.25vw;
+    }
+}
+
+/*
+@media only screen and (min-width: 900px) {
+    #portfolio {
+        background-image: url(billeder/portfolio.jpg);
+        background-size: cover;
+        width: 100%;
+        height: 56.25vw;
+    }
+}*/
