--- a/style.css
+++ b/style.css
@@ -275,3 +275,18 @@ header nav a:last-child {
     flex-grow: 1;
     flex-basis: 500px;
 }
+
+.video_responsive {
+    overflow: hidden;
+    padding-bottom: 56.25%;
+    position: relative;
+    height: 0;
+}
+
+.video_responsive iframe {
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+}
