--- a/style.css
+++ b/style.css
@@ -12,8 +12,8 @@ html {
 
 body {
     margin: 0;
-    background-color: white;
-    font-family: 'Open Sans', sans-serif;
+    background-color: ghostwhite;
+    font-family: 'Montserrat', sans-serif;
 }
 
 h1 {
@@ -67,17 +67,6 @@ header nav a:last-child {
     height: 100vw;
 }
 
-
-
-/*#portfolio {
-    background-image: url(billeder/portfolio1.jpg);
-    background-size: cover;
-    max-width: none;
-    width: 100%;
-    height: 100vw;
-}*/
-
-
 .menubar {
     display: flex;
     flex-direction: column;
@@ -107,23 +96,7 @@ header nav a:last-child {
     background-color: #555;
 }
 
-.slide_in {
-    animation: slide_in_kf 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-}
-
-@keyframes slide_in_kf {
-    0% {
-        transform: translateY(-1000px);
-        opacity: 0;
-    }
-
-    100% {
-        transform: translateY(0);
-        opacity: 1;
-    }
-}
-
-
+/*------------ANIMATIONER------------*/
 
 .swing_in {
     animation: swing_in_kf 1s cubic-bezier(0.175, 0.885, 0.320, 1.275) both;
@@ -143,38 +116,11 @@ header nav a:last-child {
     }
 }
 
+/*------------ANIMATIONER SLUT------------*/
 
-/*Mediequeries*/
-@media only screen and (min-width: 900px) {
-    #splash {
-        background-image: url(billeder/splash.jpg);
-        background-size: cover;
-        width: 100%;
-        height: 56.25vw;
-    }
-}
 
-@media only screen and (min-width: 1200px) {
-    #portfolio .centered {
-        font-size: 2rem;
-    }
-}
 
-@media only screen and (min-width: 900px) {
-    #portfolio .centered {
-        font-size: 1.2rem;
-    }
-}
-
-/*
-@media only screen and (min-width: 900px) {
-    #portfolio {
-        background-image: url(billeder/portfolio.jpg);
-        background-size: cover;
-        width: 100%;
-        height: 56.25vw;
-    }
-}*/
+/*------------DROPDOWN MENU------------*/
 
 .dropdown {
     display: inline-block;
@@ -197,6 +143,10 @@ header nav a:last-child {
 .dropdown:hover .dropdown-content {
     display: block;
 }
+
+/*------------DROPDOWN MENU SLUT------------*/
+
+/*-----------PORTFOLIO------------*/
 
 #portfolio h1 {
     font-size: 1.5rem;
@@ -228,6 +178,7 @@ header nav a:last-child {
 
 #portfolio img:hover {
     opacity: 0.8;
+    transform: scale(1.02);
 }
 
 #portfolio .sectionwrapper {
@@ -237,7 +188,47 @@ header nav a:last-child {
     padding: 1rem;
 }
 
-/*GRUNDLÆGGENDE WEB*/
+/*-----------PORTFOLIO SLUT------------*/
+
+
+/*-----------OM------------*/
+
+#om h1 {
+    font-size: 1.5rem;
+    text-align: center;
+}
+
+#om h2 {
+    font-size: 2rem;
+}
+
+#om p {
+    font-size: 1.2rem;
+}
+
+#om .text {
+    border-top: 2px solid #649ad3;
+    padding: 1rem;
+}
+
+#om .col {
+    flex-grow: 1;
+    flex-basis: 500px;
+    padding: 1rem;
+}
+
+#om .sectionwrapper {
+    display: flex;
+    flex-wrap: wrap;
+    border-top: 2px solid #649ad3;
+    padding: 1rem;
+}
+
+
+/*-----------OM SLUT------------*/
+
+
+/*------------GRUNDLÆGGENDE WEB----------*/
 
 
 
@@ -247,6 +238,7 @@ header nav a:last-child {
     padding: 1rem;
 }
 
+/*------------GRUNDLÆGGENDE WEB SLUT----------*/
 
 
 /*---------------GRUNDLÆGGENDE UX---------------*/
@@ -254,27 +246,41 @@ header nav a:last-child {
 
 #gux .col {
     flex-grow: 1;
-    flex-basis: 250px;
+    flex-basis: 600px;
     padding: 1rem;
 }
 
-/*GRUNDLÆGGENDE ANIMATION*/
+/*---------------GRUNDLÆGGENDE UX SLUT---------------*/
+
+
+/*-------------GRUNDLÆGGENDE ANIMATION--------------*/
 
 
 #ganimation .col {
     flex-grow: 1;
-    flex-basis: 250px;
+    flex-basis: 600px;
     padding: 1rem;
 }
 
-/*GRUNDLÆGGENDE INDHOLD*/
+/*-------------GRUNDLÆGGENDE ANIMATION SLUT--------------*/
+
+
+/*-----------GRUNDLÆGGENDE INDHOLD-----------*/
 
 
 #gindhold .col {
     flex-grow: 1;
-    flex-basis: 300px;
+    flex-basis: 600px;
     padding: 1rem;
 }
+
+#gindhold .col a {
+    background-color: orange;
+    color: white;
+
+}
+
+/*-----------GRUNDLÆGGENDE INDHOLD SLUT-----------*/
 
 
 /*----------VIDEO---------*/
@@ -284,11 +290,40 @@ header nav a:last-child {
     position: relative;
     height: 0;
 }
+/*----------VIDEO SLUT---------*/
 
-.video_responsive iframe {
-    left: 0;
-    top: 0;
-    height: 100%;
-    width: 100%;
-    position: absolute;
+
+/*------------MEDIAQURIES-------------*/
+@media only screen and (min-width: 900px) {
+    #splash {
+        background-image: url(billeder/splash.jpg);
+        background-size: cover;
+        width: 100%;
+        height: 56.25vw;
+    }
 }
+
+@media only screen and (min-width: 1200px) {
+    #portfolio .centered {
+        font-size: 2rem;
+    }
+}
+
+@media only screen and (min-width: 900px) {
+    #portfolio .centered {
+        font-size: 1.2rem;
+    }
+}
+
+
+@media only screen and (min-width: 900px) {
+
+    #gux .col,
+    #ganimation .col,
+    #gindhold .col {
+        flex-basis: 220px
+    }
+}
+
+
+/*------------MEDIAQURIES SLUT-------------*/
